src/test/ui/issues/1-9999/issue-9725.stderr
error[E0416]: identifier `foo` is bound more than once in the same pattern
  --> $DIR/issue-9725.rs:4:18
   |
LL |     let A { foo, foo } = A { foo: 3 };
   |                  ^^^ used in a pattern more than once

error[E0025]: field `foo` bound multiple times in the pattern
  --> $DIR/issue-9725.rs:4:18
   |
LL |     let A { foo, foo } = A { foo: 3 };
   |             ---  ^^^ multiple uses of `foo` in pattern
   |             |
   |             first use of `foo`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0025, E0416.
For more information about an error, try `rustc --explain E0025`.
